# LPG2

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lpg2.sln
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  grammars-example.yml  release.yml  runtime-head-probe.yml  tool-ci.yml  vscode-release.yml  wasm-playground.yml
docs/: AI.md  CONCEPTS.md  DEVELOPER.md  ECOSYSTEM.md  GRAMMAR_REFERENCE.md  PUBLISH_SECRETS.md  QUICKSTART.md  README.md  README.zh.md  TODO_TRIAGE.md  USER.md  runtime-README.template.md  tutorial.md
docs/en/: AI.md  CONCEPTS.md  DEVELOPER.md  ECOSYSTEM.md  GRAMMAR_REFERENCE.md  QUICKSTART.md  README.md  USER.md  tutorial.md
docs/perf-baselines/: THRESHOLDS.md
ecosystem/: compat.json
ecosystem/workflows/: publish-package.template.yml  runtime-ci.template.yml
examples/calculator/cpp/: CMakeLists.txt  README.md  main.cpp
lpg-generator-templates-2.1.00/: README.md  RELEASE_NOTES.txt
lpg2/: BOOTSTRAP.md  CMakeLists.txt  README.md  lpg2.vcxproj  lpg2.vcxproj.filters
lpg2/grammar/: jikespg.g  jikespg.lpg
lpg2/include/: Action.h  CAction.h  CSharpAction.h  CSharpTable.h  CTable.h  CppAction.h  CppAction2.h  CppTable.h  CppTable2.h  DartAction.h  GoAction.h  GoTable.h  JavaAction.h  LexStream.h  MlAction.h  MlTable.h  NTC.h  PlxAction.h  PlxasmTable.h  Python2Action.h  Python3Action.h  RustAction.h  RustTable.h  TTC.h  TypeScriptAction.h  VisitorStaffFactory.h  XmlAction.h  XmlTable.h  base.h  blocks.h  buffer.h  code.h  control.h  diagnose.h  ebnf.h  frequency.h  generator.h  grammar.h  jikespg_act.h  jikespg_prs.h  (+18 more)
lpg2/scripts/: go_to_rust_action.py  perf_baseline.sh  regen_rust_example_tables.sh  update_golden_tables.sh
lpg2/src/: AOVSort.cpp  AOVSort.h  Action.cpp  Action.h  CAction.cpp  CAction.h  CSharpAction.cpp  CSharpAction.h  CSharpTable.cpp  CSharpTable.h  CTC.h  CTable.cpp  CppAction.cpp  CppAction.h  CppAction2.cpp  CppAction2.h  CppTable.cpp  CppTable2.cpp  CppTable2.h  DartAction.cpp  DartAction.h  DartTable.cpp  DartTable.h  GoAction.cpp  GoAction.h  GoTable.cpp  JavaAction.cpp  JavaAction.h  JavaTable.cpp  JavaTable.h  LCA.h  LexStream.cpp  LexStream.h  MakeRules  MakeRules.aix  MakeRules.cygwin  MakeRules.generic  MakeRules.linux_x86  MakeRules.linux_x86_64  MakeRules.macosx_x86  (+87 more)
lpg2/tests/: CMakeLists.txt  container_tests.cpp  incremental_prs_stream_tests.cpp  output_transaction_tests.cpp  resource_path_tests.cpp  run_ast_shape_diff.cmake  run_bootstrap_conflict_gate.cmake  run_bootstrap_test.cmake  run_cli_test.cmake  run_diagnostics_json_test.cmake  run_dry_run_test.cmake  run_generation_test.cmake  run_install_test.cmake  run_malformed_inputs_test.cmake  run_nowrite_readonly_test.cmake
lpg2/tests/expected/: ast_list.sexpr  ast_nested.sexpr
lpg2/tests/fixtures/: ast_env.g  ast_iface.g  ast_list.g  ast_nested.g  ast_parent.g  ast_preorder.g  ast_recover.g  ast_recover_noblock.g  ast_toplevel.g  backtrack.g  ebnf_action_in_group.g  ebnf_ast_list.g  ebnf_bare_quant.g  ebnf_basic.g  ebnf_errors.g  ebnf_group.g  ebnf_group_bnf.g  ebnf_iso_brackets.g  ebnf_quant_macro.g  ebnf_quant_macro_conflict.g  ebnf_quantifiers.g  ebnf_recover_ban.g  ebnf_unclosed.g  ebnf_unclosed_bracket.g  glr_correlation.g  glr_cyclic.g  glr_entry.g  glr_expr.g  glr_non_ast.g  glr_recover.g  glr_rr_epsilon.g  glr_symbol_identity.g  import_base.g  import_dropactions.g  invalid.g  minimal.g  shift_reduce_conflict.g
lpg2/tests/golden/glr/java/: glr_exprprs.java
lpg2/tests/golden/minimal/cpp/: minimalprs.cpp  minimalprs.h  minimalsym.h
lpg2/tests/golden/minimal/csharp/: minimalprs.cs  minimalsym.cs
lpg2/tests/golden/minimal/dart/: minimalprs.dart  minimalsym.dart
lpg2/tests/golden/minimal/go/: minimalprs.go  minimalsym.go
lpg2/tests/golden/minimal/java/: minimalprs.java  minimalsym.java
lpg2/tests/golden/minimal/python3/: minimalprs.py  minimalsym.py
lpg2/tests/golden/minimal/rust/: minimalprs.rs  minimalsym.rs
lpg2/tests/golden/minimal/typescript/: minimalprs.ts  minimalsym.ts
lpg2/tests/harness/: cpp_parser_harness.cpp.in  cpp_parser_harness_expected_tokens.cpp.in  cpp_parser_harness_glr.cpp.in  cpp_parser_harness_glr_recover.cpp.in  cpp_parser_harness_incremental.cpp.in  cpp_parser_harness_list.cpp.in  cpp_parser_harness_recover.cpp.in  cpp_table_harness.cpp.in  csharp_parser_harness.cs.in  csharp_parser_harness_expected_tokens.cs.in  csharp_parser_harness_glr.cs.in  csharp_parser_harness_glr_recover.cs.in  csharp_parser_harness_recover.cs.in  dart_parser_harness.dart.in  dart_parser_harness_expected_tokens.dart.in  dart_parser_harness_glr.dart.in  dart_parser_harness_glr_recover.dart.in  dart_parser_harness_recover.dart.in  go_parser_harness.go.in  go_parser_harness_expected_tokens.go.in  go_parser_harness_glr.go.in  go_parser_harness_glr_recover.go.in  go_parser_harness_recover.go.in  java_parser_harness.java.in  java_parser_harness_expected_tokens.java.in  java_parser_harness_glr.java.in  java_parser_harness_glr_correlation.java.in  java_parser_harness_glr_cyclic.java.in  java_parser_harness_glr_entry.java.in  java_parser_harness_glr_non_ast.java.in  java_parser_harness_glr_recover.java.in  java_parser_harness_glr_rr_epsilon.java.in  java_parser_harness_glr_symbol_identity.java.in  java_parser_harness_list.java.in  java_parser_harness_recover.java.in  python_parser_harness.py.in  python_parser_harness_expected_tokens.py.in  python_parser_harness_glr.py.in  python_parser_harness_glr_recover.py.in  python_parser_harness_recover.py.in  (+16 more)
lpg2/tests/rust-runtime-shim/: Cargo.toml
lpg2/tests/rust-runtime-shim/src/: lib.rs
npm/lpg2/: README.md  (+1 more)
playground/: README.md  app.js  fs-stub.js  glr-demo-ui.js  glr-demo.bundle.js  incremental-demo.js  index.html  sample-glr.g  sample.g  styles.css
scripts/: build-playground-glr-demo.sh  build-wasm.sh  check-doc-links.sh  ci-docker.sh  ci-tool-local.sh  dev-bootstrap.sh  lpg2  release-checklist.sh  setup-publish-secrets.sh
(+223 files in other folders)
